Finished custom dropdown with counters. Found A bug in grid in block text-field-with-info - status takes too much place

--- a/src/assets/blocks/incdec-field/incdec-field.sass
+++ b/src/assets/blocks/incdec-field/incdec-field.sass
@@ -14,6 +14,7 @@
   border: .0625rem  solid #000
   border-radius: 50%
   font-size: 1.125rem //18px
+  cursor: pointer
 
 .incdecField__input-button--is-available
   opacity: $dark-shade-half
