--- a/src/assets/blocks/text-field-with-info/text-field-with-info.sass
+++ b/src/assets/blocks/text-field-with-info/text-field-with-info.sass
@@ -8,8 +8,6 @@
 .text-field-with-info__status
 	grid-column: 2
 	grid-row: 1
-	display: flex
-	justify-content: flex-end
 
 .text-field-with-info__status-text
 	text-align: right
@@ -28,3 +26,4 @@
 
 .text-field-with-info
 	display: grid
+	grid-template-columns: 10fr 1fr
